--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-* text eol=lf
+
+*.py        text eol=lf
+*.c         text eol=lf
+*.cpp       text eol=lf
+*.h         text eol=lf
+*.hpp       text eol=lf
